upload 404 page for testing

--- a/404.html
+++ b/404.html
@@ -7,4 +7,60 @@ hide: true
 robots: noindex, nofollow
 canonical: false
 ---
-<p>The requested page could not be found.</p>
+
+<p>
+[   12.729336] usb 1-2.1: SerialNumber: 42
+[   12.741612] input: QEMU QEMU USB Tablet as /devices/pci0000:00/0000:00:01.2/usb1/1-2/1-2.1/1-2.1:1.0/0003:0627:0001.0002/input/input5
+[   12.796881] hid-generic 0003:0627:0001.0002: input,hidraw1: USB HID v0.01 Mouse [QEMU QEMU USB Tablet] on usb-0000:00:01.2-2.1/input0
+[   14.198373] PCI Interrupt Link [LNKB] enabled at IRQ 10
+[   14.204731] hdaudio hdaudioC0D0: Unable to bind the codec
+[   14.205463] Initializing XFRM netlink socket
+[   14.214681] NET: Registered protocol family 10
+[   14.223507] Segment Routing with IPv6
+[   14.226693] sit: IPv6, IPv4 and MPLS over IPv4 tunneling driver
+[   14.231327] NET: Registered protocol family 17
+[   14.249533] DCCP: Activated CCID 2 (TCP-like)
+[   14.251749] DCCP: Activated CCID 3 (TCP-Friendly Rate Control)
+[   14.260029] sctp: Hash tables configured (bind 64/64)
+[   14.263014] 9pnet: Installing 9P2000 support
+[   14.264061] Key type dns_resolver registered
+[   14.266983] sched_clock: Marking stable (14266208593, 0)->(15311164173, -1044955580)
+[   14.269864] registered taskstats version 1
+[   14.270506] Loading compiled-in X.509 certificates
+[   14.271473] kmemleak: Kernel memory leak detector initialized
+[   14.271487] kmemleak: Automatic memory scanning thread started
+[   14.274430]   Magic number: 10:284:257
+[   14.275120] console [netcon0] enabled
+[   14.275531] netconsole: network logging started
+[   14.277921] cfg80211: Loading compiled-in X.509 certificates for regulatory database
+[   14.282203] cfg80211: Loaded X.509 cert 'sforshee: 00b28ddf47aef9cea7'
+[   14.283688] platform regulatory.0: Direct firmware load for regulatory.db failed with error -2
+[   14.284095] ALSA device list:
+[   14.285000]   No soundcards found.
+[   14.285827] cfg80211: failed to load regulatory.db
+[   14.287159] md: Waiting for all devices to be available before autodetect
+[   14.287744] md: If you don't use raid, use raid=noautodetect
+[   14.290920] md: Autodetecting RAID arrays.
+[   14.291339] md: autorun ...
+[   14.291609] md: ... autorun DONE.
+[   14.293222] EXT4-fs (sda): couldn't mount as ext3 due to feature incompatibilities
+[   14.295777] EXT4-fs (sda): couldn't mount as ext2 due to feature incompatibilities
+[   14.318187] EXT4-fs (sda): mounted filesystem with ordered data mode. Opts: (null)
+[   14.319703] VFS: Mounted root (ext4 filesystem) readonly on device 8:0.
+[   14.334900] devtmpfs: mounted
+[   14.335868] debug: unmapping init [mem 0xffffffff91f80000-0xffffffff92229fff]
+[   14.337292] Kernel memory protection disabled.
+SELinux:  Could not open policy file <= /etc/selinux/targeted/policy/policy.31:  No such file or directory
+INIT: version 2.88 booting
+[   14.493462] stty (1208) used greatest stack depth: 19304 bytes left
+[   14.506149] run-parts (1209) used greatest stack depth: 18048 bytes left
+[   14.556398] tput (1212) used greatest stack depth: 17224 bytes left
+[info] [   14.581639] echo (1216) used greatest stack depth: 16528 bytes left
+Using makefile-style concurrent boot in runlevel S.
+[   14.692289] sed (1245) used greatest stack depth: 16184 bytes left
+[   14.692975] grep (1244) used greatest stack depth: 15368 bytes left
+[....] Starting the hotplug events dispatcher: udevd[   15.119791] udevd[1314]: starting version 175
+. ok
+[....] Synthesizing the initial hotplug events...[   15.491922] WARNING! power/level is deprecated; use power/control instead
+[   14.693162] The requested page could not be found :(
+</p>
