--- a/404.html
+++ b/404.html
@@ -8,6 +8,10 @@ robots: noindex, nofollow
 canonical: false
 ---
 
+<header href="/images/kp.jpg">
+    <h2>Kernel Panic</h2>
+</header>
+
 <pre style="background:#042029;color:#839496">[   <span style="color:#d33682">12.729336</span>] usb <span
         style="color:#d33682">1</span><span style="color:#d33682">-2.1</span>: SerialNumber: <span
         style="color:#d33682">42</span>
