--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -4,7 +4,7 @@ icon: fa-envelope
 order: 4
 ---
 
-<p>If you wanna contact me. </p>
+<p>If you wanna contact me. Trying using this form  could be comfortable :)</p>
 
 <form method="post" action="https://formspree.io/{{ site.email }}">
     <div class="row">
