--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -6,9 +6,8 @@ order: 3
 
 <a href="#" class="image featured"><img src="/assets/images/pic08.jpg" alt=""/></a>
 
-<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-    ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-    laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-    parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-    dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-    ornare iaculis.</p>
+<p>
+    I'm Machine Learning Developer and Security Researcher at the same time :). <br/>
+
+    Maybe /about page would be more useful than this words.. <a href="/about" alt="about">GoTo</a>
+</p>
