--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -6,6 +6,7 @@ auto-header: none
 icon: fa-comment
 order: 1
 ---
+
 <header>
     <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br/>
         site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
@@ -14,5 +15,5 @@ order: 1
 </header>
 
 <footer>
-    <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+    <a href="/about">About Me</a>
 </footer>
