--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -15,5 +15,5 @@ order: 1
 </header>
 
 <footer>
-    <a href="/about">About Me</a>
+    <a href="/about" alt="about" class="button scrolly">About Me</a>
 </footer>
