--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -8,10 +8,10 @@ order: 1
 ---
 
 <header>
-    <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br/>
-        site template designed by <a href="http://html5up.net/prologue">HTML5 UP</a>.</h2>
-    <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a
-            href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+    <h2 class="alt">
+        Hi! I'm <strong>kozistr</strong>, a Machine Learning GUY <br/>
+        Click <strong>below bottom</strong> if you want more info about me :).
+    </h2>
 </header>
 
 <footer>
