update: intro message

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,10 +10,11 @@ order: 1
 <header>
     <h2 class="alt">
         Hi! I'm <strong>kozistr</strong>, a Machine Learning GUY <br/>
-        Click <strong>below bottom</strong> if you want more info about me :).
+        Click <strong>below bottom</strong> <br/>
+        if you want <strong>more info</strong> about me :).
     </h2>
 </header>
 
 <footer>
-    <a href="/about" alt="about" class="button scrolly">About Me</a>
+    <a href="/about" alt="about" class="button scrolly">About ME</a>
 </footer>
