--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,7 +10,7 @@ order: 1
 <header>
     <h2 class="alt">
         Hi! I'm <strong>kozistr</strong>, a Machine Learning GUY <br/>
-        Click <strong>below bottom</strong> <br/>
+        Click <strong>below button</strong> <br/>
         if you want <strong>more info</strong> about me :).
     </h2>
 </header>
