update: resize image

--- a/404.html
+++ b/404.html
@@ -8,7 +8,9 @@ robots: noindex, nofollow
 canonical: false
 ---
 
-<h2>Kernel Panic <img src="/assets/kp.jpg" alt="kernel_panic" align="bottom" height="50" , width="77"></h2>
+<h2>
+	Kernel Panic <img src="/assets/kp.jpg" alt="kernel_panic" align="bottom" height=50 width=77>
+</h2>
 
 <pre style="background:#042029;color:#839496">[   <span style="color:#d33682">24.645523</span>] The buggy address belongs to the page<span
         style="color:#859900">:</span>
