--- a/about/index.html
+++ b/about/index.html
@@ -671,11 +671,11 @@
 <ul>
 <li>Achieved <strong>SOTA</strong> performance compared to previous SOTA models (<code class="language-text">SASRec</code>, <code class="language-text">BERT4Rec</code>).</li>
 <li><strong>In A/B (online)</strong> test (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</li>
-<li><strong>Paid Conversion</strong> : improved <strong>%p1.39%</strong></li>
-<li><strong>Viewing Days</strong> : improved <strong>%p0.25%</strong></li>
-<li><strong>Viewing Minutes (median)</strong> : improved <strong>%4.10</strong></li>
-<li><strong>Click Ratio</strong> : improved <strong>%p4.30</strong></li>
-<li><strong>Play Ratio</strong> : improved <strong>%p2.32</strong></li>
+<li><strong>Paid Conversion</strong> : improved <strong>1.39%p</strong></li>
+<li><strong>Viewing Days</strong> : improved <strong>0.25%p</strong></li>
+<li><strong>Viewing Minutes (median)</strong> : improved <strong>4.10%</strong></li>
+<li><strong>Click Ratio</strong> : improved <strong>4.30%p</strong></li>
+<li><strong>Play Ratio</strong> : improved <strong>2.32%p</strong></li>
 </ul>
 </li>
 <li>
