--- a/about/index.html
+++ b/about/index.html
@@ -660,6 +660,18 @@
 <ul>
 <li>Working as a full time.</li>
 <li>
+<p>Developed training recipes to train sequential recommendation architecture.</p>
+<ul>
+<li>Build <em>Future</em> module for better understand at the time of inference.</li>
+<li>Apply augmentations to the various features, leads to performance gain &#x26; robustness.</li>
+<li><strong>In offline</strong> evaluation (internal test set)</li>
+<li><strong>MAP@1</strong> : 0.151</li>
+<li><strong>Recall@200</strong> : 0.586</li>
+<li><strong>In A/B (online)</strong> test (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</li>
+<li>coming soon</li>
+</ul>
+</li>
+<li>
 <p>Developed a model to predict expected users' view-time of the contents.</p>
 <ul>
 <li>Predict how many people going to watch, how much time people going to watch the content before the content is supplied. </li>
@@ -676,7 +688,13 @@
 <li>
 <p>Developed a novel sequential recommendation architecture to recommend what content to watch next.</p>
 <ul>
-<li>Achieve <strong>SOTA</strong> performance compared to previous SOTA models (<code class="language-text">SASRec</code>, <code class="language-text">BERT4Rec</code>).</li>
+<li>
+<p><strong>In offline</strong> evaluation (internal test set)</p>
+<ul>
+<li><strong>MAP@1</strong> : 0.142</li>
+<li><strong>Recall@200</strong> : 0.550</li>
+</ul>
+</li>
 <li>
 <p><strong>In A/B (online)</strong> test (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</p>
 <ul>
