--- a/about/index.html
+++ b/about/index.html
@@ -664,8 +664,12 @@
 <ul>
 <li>Build <em>Future</em> module for better understand at the time of inference.</li>
 <li>Apply augmentations to the various features, leads to performance gain &#x26; robustness.</li>
-<li><strong>In A/B (online)</strong> test (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</li>
-<li>coming soon</li>
+<li>
+<p><strong>In A/B (online)</strong> test (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</p>
+<ul>
+<li><strong>coming soon</strong></li>
+</ul>
+</li>
 </ul>
 </li>
 <li>
