--- a/육군훈련소 후기 & 팁/index.html
+++ b/육군훈련소 후기 & 팁/index.html
@@ -575,8 +575,8 @@
 <p>4월 29일 ~ 4월 30일 (목 ~ 금)</p>
 <ul>
 <li>식사는 생활관 안에서 전식(전투식량)</li>
-<li>양치 원래는 불가능 -> 야외에서 일렬로 하수구 위에 서게 해서 시켜줌</li>
-<li>잠잘 때 마스크는 쓰고 자는 걸 <strong>권장</strong></li>
+<li>양치 원래는 불가능 -> 야외에서 일렬로 하수구 위에 서서 시켜줌</li>
+<li>잠잘 때 마스크 쓰는 걸 <strong>권장</strong></li>
 <li>화장실은 분대(생활관 방) 단위로 여러 명 모아서, 벨을 울리면 조교가 동행하는 방식</li>
 <li>PCR 1차 결과까진 샤워는 안 시켜줌. 식사도.</li>
 <li>세면은 2명인가 4명씩 단위로 세면장에서 세면하게 함.</li>
