--- a/육군훈련소 후기 & 팁/index.html
+++ b/육군훈련소 후기 & 팁/index.html
@@ -640,8 +640,9 @@
 <li>
 <p>각개전투할 때 요대, 탄띠를 최대한 빡세게 조이자.</p>
 <ul>
-<li>각개할 때 땅에서 구르는데, 요대나 탄띠가 풀리면 꽤나 골치 아프다.</li>
-<li>걸을 때도 조이는 게 훨씬 편해요</li>
+<li>각개할 때 땅에서 구르는데, 요대나 탄띠가 풀리면 꽤 골치 아프다.</li>
+<li>각개전투 중 화생방 상황에서, 방독면을 써야 하는데, 안경쓴 사람은 마스크와 안경을 더렵혀지고 깨지지 않게 잘 보관해야 하는 불편함이 있어요.</li>
+<li>마스크가 흙먼지 범벅이 되니, 여분으로 몇 개 가져가고, 안경은 스페어안경, 방독면 쓸 때는 미리 왼쪽 가슴 주머니에 마스크하고 같이 보관하면 안전하다.</li>
 </ul>
 </li>
 <li>
@@ -653,9 +654,9 @@
 <li>
 <p>소대별로 담당 구역을 배정하는데, 분리수거, 배식 등등이 있어요.</p>
 <ul>
-<li>우리 소대는 배식을 담당했어요. (배식이 제일 빡셉니다)</li>
+<li>우리 소대는 마지막 주에 배식을 담당했어요. (배식이 제일 빡셉니다)</li>
 <li>배식에도 여러 직무가 있는데, 제일 꿀 직무는, <code class="language-text">손 소독제 짜주기</code>, <code class="language-text">부식 담당</code> 입니다. 꼭 기억하세요!</li>
-<li>위 직무를 못 했어도, <code class="language-text">식기세척</code>만 피하시면 좋습니다.</li>
+<li>위 직무를 못 했어도, <code class="language-text">식기세척</code>이나 <code class="language-text">짬 처리</code>만 피하시면 육체&#x26;정신 건강에 좋습니다.</li>
 </ul>
 </li>
 <li>인편은 많을수록 좋다.</li>
