--- a/육군훈련소 후기 & 팁/index.html
+++ b/육군훈련소 후기 & 팁/index.html
@@ -644,11 +644,12 @@
 </ul>
 </li>
 <li>
-<p>각개전투할 때 요대, 탄띠를 최대한 빡세게 조이자.</p>
+<p>각개전투할 때 </p>
 <ul>
-<li>각개할 때 땅에서 구르는데, 요대나 탄띠가 풀리면 꽤 골치 아프다.</li>
+<li>요대, 탄띠를 최대한 빡세게 조이자. 각개할 때 땅에서 구르는데, 요대나 탄띠가 풀리면 꽤 골치 아프다.</li>
 <li>각개전투 중 화생방 상황에서, 방독면을 써야 하는데, 안경 쓴 사람은 마스크와 안경을 더렵혀지고 깨지지 않게 잘 보관해야 하는 불편함이 있어요.</li>
 <li>마스크가 흙먼지 범벅이 되니, 여분으로 몇 개 가져가고, 안경은 스페어안경, 방독면 쓸 때는 미리 왼쪽 가슴 주머니에 마스크하고 같이 보관하면 안전하다.</li>
+<li>무릎, 팔꿈치 보호대를 준비하자. 없이 하면 확정으로 상처 나거나 멍이 든다. 만약 준비하지 못했다면, 양말 4켤래를 처음에 보급으로 주는데, 이걸 무릎하고 팔꿈치에 묶자.</li>
 </ul>
 </li>
 <li>
