--- a/육군훈련소 후기 & 팁/index.html
+++ b/육군훈련소 후기 & 팁/index.html
@@ -613,15 +613,15 @@
 <p>방 분위기도 저를 포함해서 운동선수인 분들이 식사/샤워 전에 운동하니까, 다른 사람들도 다 따라서 하더라고요. 그래서 항상 식사/샤워 전 시간에 방 분위기는 거의 뭐 헬스장이었어요.</p>
 <h2 id="이-외-생활" style="position:relative;"><a href="#%EC%9D%B4-%EC%99%B8-%EC%83%9D%ED%99%9C" aria-label="이 외 생활 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>이 외 생활</h2>
 <p>다른 곳은 모르겠지만, 여기는 가끔 신청 곡도 틀어주고 첫날에 중대장님인가 센스로 자장가도 틀어주고, 격리 주차엔 밥 먹고 산책도 해 주고, 여러 복지(?)도 누릴 수 있었어요.</p>
-<p>3주 일정이 빡빡해서인지, 주말이나 공휴일에는 일정이 없는 날인데, 이런 날에도 교육이나 자잘한 것들을 계속 시켜서 좋게 말하면 시간이 빨리 갔고, 나쁘게 말하면, 편하게 쉴 시간이 별로 없었어요.</p>
+<p>3주 일정이 빡빡해서인지, 주말이나 공휴일에는 일정이 없는 날인데, 이런 날에도 교육이나 자잘한 것들을 계속 시켜서 좋게 말하면 시간이 빨리 갔고, 나쁘게 말하면 편하게 쉴 시간이 별로 없었어요.</p>
 <h3 id="부식" style="position:relative;"><a href="#%EB%B6%80%EC%8B%9D" aria-label="부식 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>부식</h3>
 <p>원래 이런진 모르겠지만, 부식을 엄청나게 많이 받았는데, 틈만 나면 이온/탄산음료, 초코바, 과자, 사탕 등등 엄청나게 주더라고요. 그래서 마지막 날에 입고 온 사복 입고 나가는데, 다들 살이 겁나게 쪄서 옷이 안 맞는 헤프닝도 일어났어요.</p>
 <h3 id="아침-구보" style="position:relative;"><a href="#%EC%95%84%EC%B9%A8-%EA%B5%AC%EB%B3%B4" aria-label="아침 구보 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>아침 구보</h3>
-<p>격리 하니, 아침에 비 온다니, 여러 이유들 때문에 아침 구보를 한 번 밖에 못 했어요 ㅠㅠ. 갠적으로 매일 아침 뛰고 싶었는데, 못 뛰어서 매우 아쉽네용.</p>
+<p>격리 하니, 아침에 비 온다니, 여러 이유들 때문에 아침 구보를 한 번 밖에 못 했어요 ㅠㅠ. 갠적으로 매일 아침 뛰고 싶었는데, 못 뛰어서 매우 아쉽네요.</p>
 <h4 id="px--전화" style="position:relative;"><a href="#px--%EC%A0%84%ED%99%94" aria-label="px  전화 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>PX &#x26; 전화</h4>
-<p>케바케긴한데, 저희 분대가 워리어카드, top10카드라 해서, 활동에 열심히 참여한 분대에 주는 포상이 있는데, 이런 포상까지 다 합쳐서, PX는 4~5번, 전화는 거의 8번 정도 한 듯합니다. 분, 소, 중대장 훈련병, 사격 도움이는 추가로 더 이용. 처음에 PX는 잘해야 2번 가고, 전화도 거의 못 한다는 소리를 들어서, 친구들 집 주소만 챙기고 전화번호를 안 적어 갔는데, 좀 후회되네요.</p>
+<p>케바케긴한데, 워리어카드, TOP10카드라 해서, 활동에 열심히 참여한 분대에 주는 포상이 있는데, 이런 포상까지 다 합쳐서, PX는 4~5번, 전화는 거의 6번 정도 한 듯합니다. 분, 소, 중대장 훈련병, 사격 도움이는 추가로 더 이용. 처음에 PX는 잘해야 2번 가고, 전화도 거의 못 한다는 소리를 들어서, 친구들 집 주소만 챙기고 전화번호를 안 적어 갔는데, 좀 후회되네요.</p>
 <p>구매 금액은 음식들은 한 번에 5 ~ 8000원, 금지 품목 이외엔 무제한이라고 했는데, 다른 사람들 보니 음식만 3만 원 정도 사도 따로 뭐라 하지는 않는 듯 해요. 전, 과자나 음료수 군것질을 평소에 안 해서 PX를 가도 딱히 살 게 없어서 만 원 정도 썼으려나 해요.</p>
-<p>다른 후기를 보니 PX에서 산 식품들을 산 즉시 처리해야 하던데, 여기는 따로 그런 제한은 없었어요.</p>
+<p>다른 후기를 보니 PX에서 산 식품들을 즉시 처리해야 하던데, 따로 그런 제한은 없었어요.</p>
 <h4 id="종교" style="position:relative;"><a href="#%EC%A2%85%EA%B5%90" aria-label="종교 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>종교</h4>
 <p>종교 활동은 2 주차 주말에 갈 수 있는데, 요즘은 코시국이라 <a href="https://www.youtube.com/watch?v=NRAKho-OMHM" target="_blank" rel="nofollow noopener noreferrer">실로암</a>같은 광기는 보기 힘들고, 긴 의자에 한 명씩 건너 앉아서 그냥 조용한 분위기라 캅니다. 회사 분께서 그냥 자는게 이득이라 해서 안 가고 남은 사람들끼리 수다나 떨었는데, 만약 재미를 바라고 가는거라면 조금은 실망할 수 있을 듯 해요.</p>
 <h2 id="팁" style="position:relative;"><a href="#%ED%8C%81" aria-label="팁 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>팁</h2>
@@ -631,9 +631,9 @@
 <li>책 1~2권으론 부족하다. 스도쿠나 책을 더 가져가자.</li>
 <li>머리는 케바케, 안전빵으로 15~20mm. 굳이 더 짧게 밀 필요는 없을 듯해요.</li>
 <li>
-<p><strong>면봉</strong>, <strong>물티슈</strong> 넉넉하게. 총기 청소하고, 뭐 닦을 때 필수품!</p>
+<p><strong>면봉</strong>, <strong>물티슈</strong> 넉넉하게. 총기 청소하고, 뭐 닦을 때 필수품</p>
 <ul>
-<li>총기 검사도 마지막 주에 하는데, 청소 뭐 열심히 해야 통과된다 이런 말 하는데, 그냥 적당히 하심 됩니다.</li>
+<li>총기 검사도 마지막 주에 하는데, 청소 뭐 열심히 해야 통과된다 겁 주는데, 그냥 적당히 하심 됩니다.</li>
 </ul>
 </li>
 <li><strong>이어플러그</strong> 진짜 정말 <strong>필수</strong>템입니다. 밤마다 부조화로운 오케스트라를 감상하는 경험을 피하고 싶다면...</li>
