--- a/about/index.html
+++ b/about/index.html
@@ -761,7 +761,7 @@
 <li>Handling un-normalized text w/ various convolution kernel size and dropout</li>
 </ul>
 <p><strong>Conferences/Workshops</strong></p>
-<p>[1] kozistr<em>team, [</em>NAVER NLP Challenge 2018 SRL Task<em>](<a href="https://github.com/naver/nlp-challenge/raw/master/slides/Naver.NLP.Workshop.SRL.kozistr" target="_blank" rel="nofollow noopener noreferrer">https://github.com/naver/nlp-challenge/raw/master/slides/Naver.NLP.Workshop.SRL.kozistr</a></em>team.pdf)</p>
+<p>[1] kozistr<em>team, &#x3C;a href="<a href="https://github.com/naver/nlp-challenge/raw/master/slides/Naver.NLP.Workshop.SRL.kozistr" target="_blank" rel="nofollow noopener noreferrer">https://github.com/naver/nlp-challenge/raw/master/slides/Naver.NLP.Workshop.SRL.kozistr</a></em>team.pdf"><em>NAVER NLP Challenge 2018 SRL Task</em></a></p>
 <ul>
 <li>SRL Task, challenging w/o any domain knowledge. Presented about trails &#x26; errors during the competition</li>
 </ul>
