--- a/about/index.html
+++ b/about/index.html
@@ -675,8 +675,12 @@
 <p><strong>In A/B (online)</strong> test, <code class="language-text">FLAT</code> vs <code class="language-text">FutureFLAT</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</p>
 <ul>
 <li>Compared to the previous model, there’s no (statistically significant) changes.</li>
-<li>However, it still seems to be better on the offline metrics &#x26; training stability. So, we chose to use it.
-_ <strong>In A/B (online)</strong> test, <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer"><code class="language-text">Div2Vec</code></a> vs <code class="language-text">FutureFLAT</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</li>
+<li>However, it still seems to be better on the offline metrics &#x26; training stability. So, we chose to use it.</li>
+</ul>
+</li>
+<li>
+<p><strong>In A/B (online)</strong> test, <a href="https://arxiv.org/abs/2009.09588" target="_blank" rel="nofollow noopener noreferrer"><code class="language-text">Div2Vec</code></a> vs <code class="language-text">FutureFLAT</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</p>
+<ul>
 <li><strong>Viewing Days (mean)</strong> : improved <strong>1.012%</strong></li>
 <li><strong>Viewing Minutes (median)</strong> : improved <strong>1.015%</strong></li>
 </ul>
