--- a/AnycostGAN/index.html
+++ b/AnycostGAN/index.html
@@ -568,13 +568,25 @@
 <p>논문의 목표는 <code class="language-text">run at diverse computational costs</code>라고 하며, 넓은 범위의 computational costs에 따른 계산(~= 이미지 생성)이 가능하다는 점 입니다. editing 같이 빠르게 수정해야할 니즈가 있는 건 low-cost(sub) generator를 사용해 preview를 보여주고, 최종 결과물을 render할 때엔 high-cost(full) generator를 사용할 수 있다고 합니다.</p>
 <p>아래와 같이 크게 <code class="language-text">3개의 특징</code>으로 정리해 볼 수 있습니다.</p>
 <ol>
-<li><code class="language-text">stage-wise training</code> to stablize the process</li>
+<li>
+<p><code class="language-text">stage-wise training</code> to stablize the process</p>
+<ul>
 <li>a generator가 여러 configurations에 대해 minmax optimization하는 건 pretty challenging한 일</li>
-<li>two types of <code class="language-text">channel configurations</code></li>
+</ul>
+</li>
+<li>
+<p>two types of <code class="language-text">channel configurations</code></p>
+<ul>
 <li>uniform channel reduction ratio</li>
 <li>flexible ratios</li>
-<li><code class="language-text">consistency-aware</code> encoder &#x26; <code class="language-text">iterative optimization</code> for image projection</li>
+</ul>
+</li>
+<li>
+<p><code class="language-text">consistency-aware</code> encoder &#x26; <code class="language-text">iterative optimization</code> for image projection</p>
+<ul>
 <li>optimize reconstruction loss for the both generators</li>
+</ul>
+</li>
 </ol>
 <h2 id="architecture" style="position:relative;"><a href="#architecture" aria-label="architecture permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Architecture</h2>
 <p><span
