--- a/about/index.html
+++ b/about/index.html
@@ -674,8 +674,8 @@
 <li>
 <p><strong>In A/B (online)</strong> test, <code class="language-text">FLAT</code> vs <code class="language-text">FutureFLAT</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)</p>
 <ul>
-<li>Compared to the previous model, there’s no (statistically significant) changes.</li>
-<li>However, it still seems to be better on the offline metrics &#x26; training stability. So, we chose to use it.</li>
+<li>Compared to the previous model (<code class="language-text">FLAT</code>), there’s no (statistically significant) improvments.</li>
+<li>However, it still seems to be better on <code class="language-text">the offline metrics</code> &#x26; <code class="language-text">training stability</code>. So, we chose to use it.</li>
 </ul>
 </li>
 <li>
@@ -698,7 +698,7 @@
 <p>Developed a pipeline to recognize main actors from the poster and still-cut images.</p>
 <ul>
 <li>Utilize <strong>SOTA</strong> face detector &#x26; recognizer.</li>
-<li>Optimized pre/post processing routines for low <code class="language-text">latency</code>.</li>
+<li>Optimize pre/post processing routines for low <code class="language-text">latency</code>.</li>
 </ul>
 </li>
 <li>
