--- a/about/index.html
+++ b/about/index.html
@@ -604,6 +604,7 @@
 <p><strong>Kaggle Challenges</strong> :: Kaggle Challenges :: <strong>Competition Expert</strong></p>
 <blockquote>
 <ul>
+<li><a href="https://www.kaggle.com/c/siim-covid19-detection" target="_blank" rel="nofollow noopener noreferrer">SIIM-FISABIO-RSNA COVID-19 Detection</a> - <strong>solo, top 4% (49 / 1324), Private 0.612</strong> (2021.)</li>
 <li><a href="https://www.kaggle.com/c/shopee-product-matching" target="_blank" rel="nofollow noopener noreferrer">Shopee - Price Match Guarantee</a> - <strong>solo, top 7% (166 / 2426), Private 0.725</strong> (2021.)</li>
 <li><a href="https://www.kaggle.com/c/birdsong-recognition" target="_blank" rel="nofollow noopener noreferrer">Cornell Birdcall Identification</a> - <strong>team, top 2% (24 / 1395), Private 0.631</strong> (2020.)</li>
 <li><a href="https://www.kaggle.com/c/alaska2-image-steganalysis" target="_blank" rel="nofollow noopener noreferrer">ALASKA2 Image Steganalysis</a> - <strong>solo, top 9% (93 / 1095), Private 0.917</strong> (2020.)</li>
