--- a/about/index.html
+++ b/about/index.html
@@ -725,7 +725,7 @@
 </ul>
 </li>
 </ul>
-<p>% <code class="language-text">Viewing Days</code> : likewise <code class="language-text">DAU</code> (Daily Active User), but days.</p>
+<p>% <code class="language-text">Viewing Days</code> : how many days users active on an app each month.</p>
 <p>% <code class="language-text">Viewing Minutes</code> : how many minutes user watched the contents.</p>
 <p><em>Machine Learning Engineer</em>, <strong>Rainist</strong>, <strong>(2019.11.11 ~ 2020.06.19)</strong></p>
 <ul>
