deploy: c8cc608c9d2244acecde737177a8f92f6594216e

--- a/about/index.html
+++ b/about/index.html
@@ -885,6 +885,14 @@
 <p><strong>Optimizer</strong></p>
 <ul>
 <li>
+<p><strong>pytorch-optimizer</strong> :: Bunch of optimizer implementations in PyTorch</p>
+<blockquote>
+<ul>
+<li><strong>pytorch_optimizer</strong> :: Bunch of optimizer implementations in PyTorch with clean-code, strict types. Also, including useful optimization ideas. Most of the implementations are based on the original paper, but I added some tweaks. :: <a href="https://github.com/kozistr/pytorch_optimizer" target="_blank" rel="nofollow noopener noreferrer">code</a></li>
+</ul>
+</blockquote>
+</li>
+<li>
 <p><strong>AdaBound</strong> :: Optimizer that trains as fast as Adam and as good as SGD</p>
 <blockquote>
 <ul>
