deploy: 173bfb6dcdde3699ee3abcf74f21151de4e7d138

--- a/퇴사부검/index.html
+++ b/퇴사부검/index.html
@@ -623,7 +623,7 @@
 <p>1년 반이라는 짧다면 짧고 길다면 긴 시간이지만 그래도 다양하고 많은 일을 했습니다.</p>
 <p>다양하고 많은 일을 하고 성과도 냈지만, 사실 배운 것이 제일 아쉬운 부분입니다.</p>
 <p>좋게 말하면 <strong>내가 알고 있는 지식을 정리하고 팀 문화에 정착/기여</strong>했다고, 나쁘게 말하자면 <strong>없다</strong>인 거 같아요.</p>
-<p>그래서 제 포지션은 주로 제 기술을 팀에 적용하고 팀원들을 기술적으로 케어해 주는 그런 역할이었던 거 같아요. 물론 이 과정에서도 배운 게 있다고 생각합니다.</p>
+<p>그래서 주로 팀에서 제 역할은 기술을 팀에 적용하고 팀원들을 기술적으로 케어해 주는 그런 역할이었던 거 같아요. 물론 이 과정에서도 배운 게 있다고 생각합니다.</p>
 <p>그래도 이번 회사를 통해 깨달은 것들이 있는데 하나만 적어보자면</p>
 <h4 id="너-내-동료가-제발-되어주세요" style="position:relative;"><a href="#%EB%84%88-%EB%82%B4-%EB%8F%99%EB%A3%8C%EA%B0%80-%EC%A0%9C%EB%B0%9C-%EB%90%98%EC%96%B4%EC%A3%BC%EC%84%B8%EC%9A%94" aria-label="너 내 동료가 제발 되어주세요 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>너! 내 동료가 제발 되어주세요</h4>
 <p>지금까지 적어도 직무적인 부분에선 주로 혼자 일을 했는데, 혼자 일을 할 때의 장점도 있지만 내가 하는 일에 feedback을 줄 수 있는 동료가 없고 서로 대화하면서 문제를 푸는 즐거움을 느끼지 못하는 부분에서 정말 힘 빠지는 걸 느꼈습니다. 그래서인지 회사를 구할 때 가장 먼저 확인하는 부분이 같은 직무에 동료가 있는지를 거의 1순위로 확인하곤 합니다.</p>
