deploy: d218cbfd7f2d931670b670539de4ed97b3847ceb

--- a/about/index.html
+++ b/about/index.html
@@ -551,7 +551,7 @@
 <li>
 <p><a href="#company">Company</a></p>
 <ul>
-<li><a href="#data-scientist-toss-core-20211206--present"><em>Data Scientist</em> <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></a></li>
+<li><a href="#data-scientist-toss-core-20211206--present"><em>Data Scientist</em>, <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></a></li>
 <li><a href="#machine-learning-researcher-watcha-20200622--20211203"><em>Machine Learning Researcher</em>, <strong>Watcha</strong>, <strong>(2020.06.22 ~ 2021.12.03)</strong></a></li>
 <li><a href="#machine-learning-engineer-rainist-20191111--20200619"><em>Machine Learning Engineer</em>, <strong>Rainist</strong>, <strong>(2019.11.11 ~ 2020.06.19)</strong></a></li>
 <li><a href="#machine-learning-engineer-voyagerx-20190107--20191004"><em>Machine Learning Engineer</em>, <strong>VoyagerX</strong>, <strong>(2019.01.07 ~ 2019.10.04)</strong></a></li>
@@ -734,7 +734,7 @@
 <hr>
 <h2 id="work-experience" style="position:relative;"><a href="#work-experience" aria-label="work experience permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Work Experience</h2>
 <h3 id="company" style="position:relative;"><a href="#company" aria-label="company permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Company</h3>
-<h4 id="data-scientist-toss-core-20211206--present" style="position:relative;"><a href="#data-scientist-toss-core-20211206--present" aria-label="data scientist toss core 20211206  present permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Data Scientist</em> <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></h4>
+<h4 id="data-scientist-toss-core-20211206--present" style="position:relative;"><a href="#data-scientist-toss-core-20211206--present" aria-label="data scientist toss core 20211206  present permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Data Scientist</em>, <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></h4>
 <ul>
 <li>Working as a full time.</li>
 </ul>
@@ -840,7 +840,7 @@
 <li>Developed AWS CloudTrail logger analyzer / formatter. <strong>(2019.09 ~ 2019.10)</strong></li>
 </ul>
 <h3 id="lab" style="position:relative;"><a href="#lab" aria-label="lab permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Lab</h3>
-<p>HPC Lab, KoreaTech, <strong>Undergraduate Researcher</strong>, <strong>(2018.09 ~ 2018.12)</strong></p>
+<p><a href="https://sites.google.com/view/hpclab/home" target="_blank" rel="nofollow noopener noreferrer">HPC Lab</a>, KoreaTech, <strong>Undergraduate Researcher</strong>, <strong>(2018.09 ~ 2018.12)</strong></p>
 <ul>
 <li>Wrote a paper about improved TextCNN model for predicting a movie rate.</li>
 </ul>
@@ -1033,7 +1033,7 @@
 <li>
 <p><a href="#company">Company</a></p>
 <ul>
-<li><a href="#data-scientist-toss-core-20211206--present"><em>Data Scientist</em> <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></a></li>
+<li><a href="#data-scientist-toss-core-20211206--present"><em>Data Scientist</em>, <strong>Toss Core</strong>, <strong>(2021.12.06 ~ present)</strong></a></li>
 <li><a href="#machine-learning-researcher-watcha-20200622--20211203"><em>Machine Learning Researcher</em>, <strong>Watcha</strong>, <strong>(2020.06.22 ~ 2021.12.03)</strong></a></li>
 <li><a href="#machine-learning-engineer-rainist-20191111--20200619"><em>Machine Learning Engineer</em>, <strong>Rainist</strong>, <strong>(2019.11.11 ~ 2020.06.19)</strong></a></li>
 <li><a href="#machine-learning-engineer-voyagerx-20190107--20191004"><em>Machine Learning Engineer</em>, <strong>VoyagerX</strong>, <strong>(2019.01.07 ~ 2019.10.04)</strong></a></li>
