--- a/about/index.html
+++ b/about/index.html
@@ -745,7 +745,11 @@
 <ul>
 <li>Newly proposed transformer architecture to improve the performance in a genernal manner.</li>
 <li>Apply proper post-processing logic into the model.</li>
-<li>In A/B (online) test (on-going)</li>
+<li>In A/B (online) test, <code class="language-text">FutureFLAT</code> vs <code class="language-text">Trans4Rec</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)
+<ul>
+<li>(unknown)</li>
+</ul>
+</li>
 </ul>
 </li>
 <li>Developed a music recommendation system (prototype)</li>
