--- a/about/index.html
+++ b/about/index.html
@@ -685,7 +685,7 @@
 <p><strong>NAVER NLP Challenge</strong> :: NAVER NLP Challenge 2018</p>
 <blockquote>
 <ul>
-<li><a href="https://github.com/naver/nlp-challenge" target="_blank" rel="nofollow noopener noreferrer">Final</a> - <em>Semantic Role Labeling (SRL)</em> <strong>6th place</strong> :: <a href="">Presentation</a></li>
+<li><a href="https://github.com/naver/nlp-challenge" target="_blank" rel="nofollow noopener noreferrer">Final</a> - <em>Semantic Role Labeling (SRL)</em> <strong>6th place</strong></li>
 </ul>
 </blockquote>
 </li>
