--- a/about/index.html
+++ b/about/index.html
@@ -957,7 +957,11 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <ul>
 <li>End to End Speaker Diarization</li>
 <li>Speaker Verifications</li>
-<li>Speech Synthesis</li>
+</ul>
+</li>
+<li>Computer Vision Domains
+<ul>
+<li>especially medical image domain</li>
 </ul>
 </li>
 </ul>
