--- a/about/index.html
+++ b/about/index.html
@@ -1045,7 +1045,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>calibration-aware training.</li>
 <li>In A/B (online) test, <code class="language-text">previous ML model</code> vs <code class="language-text">AdsClassifier</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)
 <ul>
-<li><strong>Conversions</strong> : soon!</li>
+<li><strong>Conversion</strong> : soon!</li>
 <li><strong>CTR</strong> : soon!</li>
 </ul>
 </li>
