--- a/3mths-review/index.html
+++ b/3mths-review/index.html
@@ -888,7 +888,8 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>빠르게 눈에 보이는 성과 내기</li>
 <li>팀원들 도와주기</li>
 </ol>
-<p>이전 DS 팀에는 code convention이나 CI/CD 등 규칙 및 문서들이 존재하지 않았고, 퀄리티나 안정성, 문서화보단 일단 완성하고 보자 방식으로 업무를 진행해서 lagacy가 산재해 있었습니다. 저희 팀은 Notion을 주로 사용하는데, 저는 이런 convention이나 규칙들을 문서화하고 팀에게 공유해서 필요성과 우선순위에 대한 공감을 얻었습니다. 그리고 foramtter와 linter를 repository에 직접 적용하고 깔끔하고 좋은 코드를 구현하기 위해서 팀 전반적인 PR의 code-review에 참여 했습니다. 이외에도 MLOps 및 모델 연구관점에서 life-cycle, 여러 ML/DL 지식 등 많은 문서를 작성했는데 이 부분도 공감 받아 팀 문화적으로도 <code class="language-text">필수적인 문서화</code>에 조금씩 기여하고 있는거 같아요.</p>
+<p>이전 DS 팀에는 code convention이나 CI/CD 등 규칙 및 문서들이 존재하지 않았고, 퀄리티나 안정성, 문서화보단 일단 완성하고 보자 방식으로 업무를 진행해서 lagacy가 산재해 있었습니다. 저희 팀은 Notion을 주로 사용하는데, 저는 이런 convention이나 규칙들을 문서화하고 팀에게 공유해서 필요성과 우선순위에 대한 공감을 얻었습니다.</p>
+<p>그리고 foramtter와 linter를 repository에 직접 적용하고 깔끔하고 좋은 코드를 구현하기 위해서 팀 전반적인 PR의 code-review에 참여 했습니다. 이외에도 MLOps 및 모델 연구관점에서 life-cycle, 여러 ML/DL 지식 등 많은 문서를 작성했는데 이 부분도 공감 받아 팀 문화적으로도 <code class="language-text">필수적인 문서화</code>에 조금씩 기여하고 있는거 같아요.</p>
 <p>이전에도 code-review 하는 문화가 있었지만, 제대로 이뤄지고 있지 않아서 이 부분도 손 걷어붙이고 제가 주도하면서 다른 분들도 그냥 LGTM이 아닌 건전하게 의견을 제시할 수 있게끔 했던 거 같아요. 아직도 개선하기 위해서 노력 중 입니당.</p>
 <p>정리하면,</p>
 <ol>
