--- a/3mths-review/index.html
+++ b/3mths-review/index.html
@@ -897,7 +897,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>제 분야에서 성과를 보여주는 과정에서</li>
 </ol>
 <p>신뢰를 얻게 된 거 같아요.</p>
-<p>다만, 그 과정에서 가끔 저만의 아쉬움과 답답함이 나와서 부족한 모습도 있었는데, 앞으로 더 개선해야겠습니다. 처음엔 업무에서의 권한 없이 타인의 <code class="language-text">공감과 신뢰</code>를 얻는 것에 대한 중요도를 잘 몰랐던 사람이었다면, 지금은 필요성을 알고 어려운 일이라는 걸 깨닫는 좋은 경험이었습니다.</p>
+<p>다만, 그 과정에서 가끔 저만의 아쉬움과 답답함이 나와서 부족한 모습도 있었는데, 앞으로 더 개선해야겠습니다. 처음엔 업무에서의 권한 없이 타인의 <code class="language-text">공감과 신뢰</code>를 얻는 것에 대한 중요도를 잘 몰랐다면, 지금은 필요성을 알고 어려운 일이라는 걸 깨닫는 좋은 경험이었습니다.</p>
 <p>또한, 토스에서 <code class="language-text">권한</code>없이 제 실력과 방향에 대해 팀원들의 신뢰와 공감을 얻는 과정에서 많은 것을 배운 거 같습니다. 감사하게도 팀원 분들께서도 피드백 주시길 개인이나 팀 단위의 공감대를 잘 형성했다 말씀해 주셔서 제 방식이 잘 먹혔던(?) 거 같아요.</p>
 <p>최근에 <a href="https://jojoldu.tistory.com/626" target="_blank" rel="nofollow noopener noreferrer">회고</a>를 보면서 등장한 짤인데, 제 상황에 가장 알맞은 거 같아서 가져왔어요.</p>
 <p><span
