update: about.md

--- a/about/index.html
+++ b/about/index.html
@@ -1067,7 +1067,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </ul>
 <h4 id="machine-learning-researcher-watcha-20200622--20211203" style="position:relative;"><a href="#machine-learning-researcher-watcha-20200622--20211203" aria-label="machine learning researcher watcha 20200622  20211203 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Researcher</em>, <strong>Watcha</strong>, <strong>(2020.06.22 ~ 2021.12.03)</strong></h4>
 <ul>
-<li>Working as a full time.</li>
+<li>Worked as a full time.</li>
 <li>Developed a new sequential recommendation architecture. (named <code class="language-text">Trans4Rec</code>)
 <ul>
 <li>Newly proposed transformer architecture to improve the performance in a genernal manner.</li>
