--- a/about/index.html
+++ b/about/index.html
@@ -1049,7 +1049,7 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </li>
 <li>Developed the robust captcha model to predict captchas.
 <ul>
-<li>light-weighted CNN model for real-time inference (about <code class="language-text">~ 1000 TPS</code> for a batch transaction, <code class="language-text">80 ~ 100 TPS</code> for a sample on the CPU)</li>
+<li>light-weight CNN model to inference in real time (about <code class="language-text">~ 1000 TPS</code> for a batch transaction, <code class="language-text">80 ~ 100 TPS</code> for a sample on the CPU)</li>
 <li>Build augmentations which fit in the domain to build a robust model.</li>
 <li>Build the RESTful API server to serve the model in real-time on the CPU.</li>
 <li>In A/B (online) test, <code class="language-text">google vision OCR</code> vs <code class="language-text">New Captcha Model</code>
