--- a/about/index.html
+++ b/about/index.html
@@ -1040,7 +1040,6 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <h3 id="company" style="position:relative;"><a href="#company" aria-label="company permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Company</h3>
 <h4 id="data-scientist-toss-core-toss-cb-20211206--present" style="position:relative;"><a href="#data-scientist-toss-core-toss-cb-20211206--present" aria-label="data scientist toss core toss cb 20211206  present permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Data Scientist</em>, <strong>Toss core, Toss CB</strong>, <strong>(2021.12.06 ~ present)</strong></h4>
 <ul>
-<li>Working as full-time.</li>
 <li>Developed the bot which summarizes the long slack threads.
 <ul>
 <li>help people to understand the context quickly with a minimum effort.</li>
@@ -1099,10 +1098,10 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li>Help to boost the accuracy of the ads category, which increases the revenue in a roundabout way.</li>
 </ul>
 </li>
+<li>Working as full-time.</li>
 </ul>
 <h4 id="machine-learning-researcher-watcha-20200622--20211203" style="position:relative;"><a href="#machine-learning-researcher-watcha-20200622--20211203" aria-label="machine learning researcher watcha 20200622  20211203 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Researcher</em>, <strong>Watcha</strong>, <strong>(2020.06.22 ~ 2021.12.03)</strong></h4>
 <ul>
-<li>Worked as full-time.</li>
 <li>Developed a new sequential recommendation architecture. (named <code class="language-text">Trans4Rec</code>)
 <ul>
 <li>Newly proposed transformer architecture to improve the performance in a genernal manner.</li>
@@ -1158,42 +1157,42 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </li>
 </ul>
 </li>
-<li>Developed Image Super-Resolution model to upscale movie &#x26; tv poster, still-cut images.
+<li>Internal product to help designer's works
 <ul>
-<li>Optimize the code to achieve <code class="language-text">low latency</code> &#x26; <code class="language-text">memory efficiency</code> on <em>CPU</em>.</li>
-<li>An internal evaluation (qualitative evaluation by the designers), the model catches details better &#x26; handles higher resolution.</li>
+<li>Developed the image super-resolution model to upscale image more accurate and faster (e.g., waifu).</li>
 </ul>
 </li>
+<li>Worked as full-time.</li>
 </ul>
 <p>% <code class="language-text">*Viewing Days</code> : how many days are users active on an app each month.</p>
 <p>% <code class="language-text">*Viewing Minutes</code> : how many minutes the user watched the contents.</p>
 <h4 id="machine-learning-engineer-rainist-20191111--20200619" style="position:relative;"><a href="#machine-learning-engineer-rainist-20191111--20200619" aria-label="machine learning engineer rainist 20191111  20200619 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Engineer</em>, <strong>Rainist</strong>, <strong>(2019.11.11 ~ 2020.06.19)</strong></h4>
 <ul>
-<li>Developed the transaction category classification application to automatically identify the category for the convenience of user experience.
+<li>transaction category classification application to identify the category for the convenience of user experience.
 <ul>
 <li>Developed the lightweight transaction category classification model. <strong>In A/B test</strong>, the new model <strong>achieved 25 ~ 30%p+</strong> <code class="language-text">*Accuracy</code> improvement.</li>
-</ul>
-</li>
 <li>Developed the backends (e.g., model serving, business logic microservices) in Python.
 <ul>
 <li>Utilized inference-aware framework (ONNX) to goal stable and low latency.</li>
 <li>Achieved a target latency of about 7 ~ 10 TPS (p50 latency) while handling <code class="language-text">1M transactions/day</code> (1 transaction = 100 samples).</li>
 </ul>
 </li>
-<li>Developed the CSS model to forecast the possibility of loan overdue.</li>
+</ul>
+</li>
+<li>CSS model to forecast the possibility of loan overdue.</li>
 <li>Worked as full-time.</li>
 </ul>
 <p>% <code class="language-text">*Accuracy</code> : how many users don't update their transactions' category.</p>
 <h4 id="machine-learning-engineer-voyagerx-20190107--20191004" style="position:relative;"><a href="#machine-learning-engineer-voyagerx-20190107--20191004" aria-label="machine learning engineer voyagerx 20190107  20191004 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Engineer</em>, <strong>VoyagerX</strong>, <strong>(2019.01.07 ~ 2019.10.04)</strong></h4>
 <ul>
-<li>Developed <code class="language-text">proceedings</code> deep learning application which automatically recognizes speakers &#x26; speeches (speaker diarization).
+<li><code class="language-text">Proceedings</code> deep learning application which automatically recognizes speakers &#x26; speeches (speaker diarization).
 <ul>
 <li>Developed the backend to diarize the conversation.</li>
 <li>Developed the lightweight speaker verification model (served at AWS Lambda).</li>
 <li>Developed the on/offline speaker diarization based on clustering &#x26; E2E methods.</li>
 </ul>
 </li>
-<li>Developed a <code class="language-text">hair salon</code> project to swap the hair with what the user wants naturally.
+<li><code class="language-text">Hair Salon</code> project to swap the hair with what the user wants naturally.
 <ul>
 <li>Developed a hair/face image segmentation model to identify hair &#x26; face accurately.</li>
 <li>Developed image in-painting model to detach a hair.</li>
