--- a/about/index.html
+++ b/about/index.html
@@ -1102,7 +1102,8 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </ul>
 <h4 id="machine-learning-researcher-watcha-20200622--20211203" style="position:relative;"><a href="#machine-learning-researcher-watcha-20200622--20211203" aria-label="machine learning researcher watcha 20200622  20211203 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Researcher</em>, <strong>Watcha</strong>, <strong>(2020.06.22 ~ 2021.12.03)</strong></h4>
 <ul>
-<li>Developed a new sequential recommendation architecture. (named <code class="language-text">Trans4Rec</code>)
+<li>
+<p>Developed a new sequential recommendation architecture. (named <code class="language-text">Trans4Rec</code>)</p>
 <ul>
 <li>Newly proposed transformer architecture to improve the performance in a genernal manner.</li>
 <li>Apply proper post-processing logic into the model.</li>
@@ -1113,8 +1114,8 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </li>
 </ul>
 </li>
-<li>Developed a music recommendation system (prototype)</li>
-<li>Developed a training recipe to train sequential recommendation architecture. (named <code class="language-text">FutureFLAT</code>)
+<li>
+<p>Developed a training recipe to train sequential recommendation architecture. (named <code class="language-text">FutureFLAT</code>)</p>
 <ul>
 <li>Build a network to capture the times.</li>
 <li>Apply augmentations to the various features, leads to performance gain &#x26; robustness.</li>
@@ -1130,23 +1131,23 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 <li><strong>*Viewing Minutes (median)</strong> : improved <strong>1.015%</strong></li>
 </ul>
 </li>
-</ul>
-</li>
-<li>Developed a model to predict expected users' view-time of the contents.
-<ul>
 <li>Predict how many and how much time people are going to watch the content before the content supplied.</li>
 <li>Find out which features impact users' watches.</li>
 </ul>
 </li>
-<li>Developed a pipeline to recognize the main actors from the poster and still-cut images.
+<li>
+<p>Developed a pipeline to recognize the main actors from the poster and still-cut images.</p>
 <ul>
 <li>Utilize <code class="language-text">SOTA</code> face detector &#x26; recognizer.</li>
 <li>Optimize pre/post processing routines to work on <code class="language-text">CPU</code>.</li>
 </ul>
 </li>
-<li>Developed a novel sequential recommendation architecture to recommend what content to watch next. (named <code class="language-text">FLAT</code>)
+<li>
+<p>Watcha recommendation system to offer better user experience and increase <code class="language-text">paid conversion</code>.</p>
 <ul>
-<li><strong>In A/B (online)</strong> test, <code class="language-text">previous algorithms</code> vs <code class="language-text">FLAT</code> (statistically significant <code class="language-text">p-value &lt; 0.05</code>)
+<li>Developed the novel sequential recommendation architecture to recommend what content to watch next.
+<ul>
+<li><strong>In A/B</strong> test, <code class="language-text">previous algorithm</code> vs <code class="language-text">FLAT</code>
 <ul>
 <li><strong>Paid Conversion</strong> : improved <strong>1.39%p+</strong></li>
 <li><strong>*Viewing Days (mean)</strong> : improved <strong>0.25%p+</strong></li>
@@ -1157,24 +1158,38 @@ svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
 </li>
 </ul>
 </li>
-<li>Internal product to help designer's works
-<ul>
-<li>Developed the image super-resolution model to upscale image more accurate and faster (e.g., waifu).</li>
 </ul>
 </li>
-<li>Worked as full-time.</li>
+<li>
+<p>Music recommendation system for <code class="language-text">Watcha Music</code> (prototype)</p>
+</li>
+<li>
+<p>Internal product to predict expected users' view-time of the content.</p>
+<ul>
+<li>Before the content is imported, the model gives an insight into the valuation of the content like expected view-time affecting the cost of the content.</li>
 </ul>
-<p>% <code class="language-text">*Viewing Days</code> : how many days are users active on an app each month.</p>
-<p>% <code class="language-text">*Viewing Minutes</code> : how many minutes the user watched the contents.</p>
+</li>
+<li>
+<p>Internal product to help designer's works</p>
+<ul>
+<li>Developed the image super-resolution model to upscale image more accurately and faster (e.g., waifu).</li>
+</ul>
+</li>
+<li>
+<p>Worked as full-time.</p>
+</li>
+</ul>
+<p>% <code class="language-text">*Viewing Days</code> : how many days users are active on an app each month.</p>
+<p>% <code class="language-text">*Viewing Minutes</code> : how many minutes the user watched the content.</p>
 <h4 id="machine-learning-engineer-rainist-20191111--20200619" style="position:relative;"><a href="#machine-learning-engineer-rainist-20191111--20200619" aria-label="machine learning engineer rainist 20191111  20200619 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a><em>Machine Learning Engineer</em>, <strong>Rainist</strong>, <strong>(2019.11.11 ~ 2020.06.19)</strong></h4>
 <ul>
-<li>transaction category classification application to identify the category for the convenience of user experience.
+<li>Transaction category classification application to identify the category for the convenience of user experience.
 <ul>
 <li>Developed the lightweight transaction category classification model. <strong>In A/B test</strong>, the new model <strong>achieved 25 ~ 30%p+</strong> <code class="language-text">*Accuracy</code> improvement.</li>
 <li>Developed the backends (e.g., model serving, business logic microservices) in Python.
 <ul>
 <li>Utilized inference-aware framework (ONNX) to goal stable and low latency.</li>
-<li>Achieved a target latency of about 7 ~ 10 TPS (p50 latency) while handling <code class="language-text">1M transactions/day</code> (1 transaction = 100 samples).</li>
+<li>Achieved a target latency of about 7 ~ 10 TPS (p50) while handling <code class="language-text">1M transactions/day</code> (1 transaction = 100 samples).</li>
 </ul>
 </li>
 </ul>
